[JENKINS-39563] rework FormElement to align more closely with style guide; fix exports for consistency

--- a/less/components/form-element.less
+++ b/less/components/form-element.less
@@ -3,20 +3,19 @@
     flex-direction: column;
     font-size: 16px;
     margin-bottom: 10px;
+}
 
-    .error-section {
-        display: table;
-        color: #f00;
-        border: 1px solid #f00;
-        background: rgba(255, 0, 0, 0.25);
-        margin-top: 5px;
-        padding: 2px;
-    }
+.error-text {
+    color: @brand-danger;
 }
 
 .form-element.error-state {
+    .form-label {
+        color: @brand-danger;
+    }
+
     .text-field {
-        border-color: #f00;
-        outline-color: #f00;
+        border-color: @brand-danger;
+        outline-color: @brand-danger-lite;
     }
 }
